Fix for border gap

--- a/src/css/navbar.css
+++ b/src/css/navbar.css
@@ -1,41 +1,37 @@
 :root {
     --navbar-border-radius: 20px;
+    --navbar-background-color: rgba(2, 1, 17, 0.5);
+    --navbar-border-size: 2px;
 }
 
 header .navbar {
     backdrop-filter: blur(6px);
     -webkit-backdrop-filter: blur(6px);
-    background-color: rgba(2, 1, 17, 0.5);
+    background-color: var(--navbar-background-color);
 }
 
 header .navbar a {
     color: var(--text-color);
 }
 
-header .navbar-nav {
-    border-radius: 20px;
-    border: 1.5px solid var(--text-color);
-}
-
 header .navbar-nav .nav-link {
     transition: color 0.3s ease, background-color 0.3s ease;
+    font-weight: 600;
+    border-bottom: var(--navbar-border-size) solid var(--title-text-color);
+    border-top: var(--navbar-border-size) solid var(--title-text-color);
 }
 
 header .navbar .btn-nav {
     color: var(--text-color);
-    border: 2px solid var(--text-color);
+    border: var(--navbar-border-size) solid var(--text-color);
     background-color: transparent;
     transition: color 0.3s ease, border 0.3s ease, background-color 0.3s ease;
 }
 
 header .navbar .btn-nav:hover {
     color: var(--background-color);
-    border: 2px solid var(--text-color);
+    border: var(--navbar-border-size) solid var(--text-color);
     background-color: var(--title-text-color);
-}
-
-header .navbar-nav .nav-link {
-    font-weight: 600;
 }
 
 header .nav-item a:hover,
@@ -65,19 +61,23 @@ header .navbar-nav .nav-link.active {
 
 header .nav-item .first-item {
     border-radius: var(--navbar-border-radius) var(--navbar-border-radius) 0 0;
+    border-left: var(--navbar-border-size) solid var(--title-text-color);
 }
 
 header .nav-item .last-item {
     border-radius: 0 0 var(--navbar-border-radius) var(--navbar-border-radius);
+    border-right: var(--navbar-border-size) solid var(--title-text-color);
 }
 
 @media (min-width: 768px) {
     header .nav-item .first-item {
         border-radius: var(--navbar-border-radius) 0 0 var(--navbar-border-radius);
+        border-left: var(--navbar-border-size) solid var(--title-text-color);
     }
 
     header .nav-item .last-item {
         border-radius: 0 var(--navbar-border-radius) var(--navbar-border-radius) 0;
+        border-right: var(--navbar-border-size) solid var(--title-text-color);
     }
 }
 
